	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	  which provides new target `make check-code-coverage`

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file,
	  define prerequisites to fix parallel builds

2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: change in library check for BDB - prefer library
	  with version number from db.h included (-ldb-6.1 over -ldb) to
	  prevent errors on system with multiple versions that linked
	  against wrong version, see bug #100

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: removed AM_MAINTAINER_MODE, added AM_PROG_LEX,
	  AC_PROG_YACC, AM_MISSING_PROG([HELP2MAN], [help2man])
	* create_win_dist.sh: integrated hack for _MSC_VER from
	  cobc/Makefile.am; use a clean temporary folder for building

2017-04-18  Ron Norman <rjn@inglenet.com>

	* configure.ac: check for 'isfinite' (HAVE_ISFINITE)
	  'isfinite' is in the C99 standard and 'finite' deprecated with some
	  compilers

2017-02-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* HACKING: added info how to prepare a distribution
	* Makefile.am: don't touch any generated files, see HACKING
	* Makefile.am: chmod for all files to 644,
	  executable scripts and directories get 755

2017-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* HACKING, README: moved instructions for development/svn-builds
	  from README to new file HACKING and added missing information

2017-02-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed use of undefined COB_TIMEZONE

2017-02-04  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: fixed bug where -g3 in CFLAGS was replaced by 3,
	  instead of being removed.

2016-12-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
